--- a/PhersonalApplication/PhersonalApplication/App.xaml
+++ b/PhersonalApplication/PhersonalApplication/App.xaml
@@ -5,10 +5,10 @@
     <Application.Resources>
         <ResourceDictionary>
             <!--Global Styles-->
-            <Color x:Key="NavigationPrimary">#FF5733</Color>
+            <Color x:Key="NavigationPrimary">#FF5233</Color>
             <Style TargetType="NavigationPage">
-                <Setter Property="BarBackgroundColor" Value="{StaticResource NavigationPrimary}" />
-                <Setter Property="BarTextColor" Value="Brown" />
+                <Setter Property="BarBackgroundColor"  Value="Gray" />
+                <Setter Property="BarTextColor" Value="Black" />
             </Style>
         </ResourceDictionary>
     </Application.Resources>
