--- a/PhersonalApplication/PhersonalApplication/Views/MainPage.xaml
+++ b/PhersonalApplication/PhersonalApplication/Views/MainPage.xaml
@@ -1,11 +1,14 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
 <TabbedPage xmlns="http://xamarin.com/schemas/2014/forms" xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
             xmlns:local="clr-namespace:PhersonalApplication.Views;assembly=PhersonalApplication"
-            xmlns:local1="clr-namespace:PhersonalApplication.Views"
-            x:Class="PhersonalApplication.Views.MainPage">
+            x:Class="PhersonalApplication.Views.MainPage"
+            NavigationPage.HasNavigationBar="False">
     <local:HomePage Title="Hem" IconImageSource="HomeIcon.png" />
     <local:CustomerCard Title="Kort" IconImageSource="customercard.png"/>
     <local:Activities Title="Aktiviteter" IconImageSource="NotificationIcon.png" />
-    <local1:NewsPage Title="NyheterTest" IconImageSource="NotificationIcon.png" />
+    <local:NewsPage Title="NyheterTest" IconImageSource="newsicon.png" />
+    
+            
+        
 
 </TabbedPage>
