--- a/PhersonalApplication/PhersonalApplication/Views/LoginPage.xaml
+++ b/PhersonalApplication/PhersonalApplication/Views/LoginPage.xaml
@@ -1,15 +1,15 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
-<ContentPage xmlns="http://xamarin.com/schemas/2014/forms" xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" x:Class="PhersonalApplication.Views.LoginPage" Title="Login">
+<ContentPage xmlns="http://xamarin.com/schemas/2014/forms" xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" x:Class="PhersonalApplication.Views.LoginPage" Title="Logga in">
     <ContentPage.ToolbarItems>
-        <ToolbarItem Text="Sign Up" Clicked="OnSignUpButtonClicked" />
+        <!--<ToolbarItem Text="Sign Up" Clicked="OnSignUpButtonClicked" />-->
     </ContentPage.ToolbarItems>
     <ContentPage.Content>
         <StackLayout VerticalOptions="StartAndExpand">
-            <Label Text="Username" />
-            <Entry x:Name="usernameEntry" Placeholder="username" />
-            <Label Text="Password" />
-            <Entry x:Name="passwordEntry" IsPassword="true" />
-            <Button Text="Login" Clicked="OnLoginButtonClicked" />
+            <!--<Label Text="Epost" />-->
+            <Entry x:Name="usernameEntry" Placeholder="Epost" />
+            <!--<Label Text="Lösenord" />-->
+            <Entry x:Name="passwordEntry" Placeholder="Lösenord" IsPassword="true" />
+            <Button Text="Logga in" Clicked="OnLoginButtonClicked" />
             <Label x:Name="messageLabel" />
         </StackLayout>
     </ContentPage.Content>
