--- a/PhersonalApplication/PhersonalApplication/Views/CustomerCard.xaml
+++ b/PhersonalApplication/PhersonalApplication/Views/CustomerCard.xaml
@@ -11,17 +11,19 @@
             <!--Rotation="90"-->
             <StackLayout>
                 <Image Source="phersonalstor.jpg" />
-                <Label Text="Förnamn Efternamn"
+                <Label Text="{Binding Förnamn} "
+                   FontSize="Medium"
+                   FontAttributes="Bold" />
+                <Label Text="{Binding Efternamn} "
                    FontSize="Medium"
                    FontAttributes="Bold" />
                 <BoxView Color="Gray"
                    HeightRequest="2"
                    HorizontalOptions="Fill" />
-                <Label Text="Institution:"/>
-                <!--<Label Text="Telefonnummer:"/>-->
-                <!--<Label Text="Epost:"/>-->
-                <Label Text="Giltighetsår:"/>
-                <Label Text="Registreringsdatum:"/>
+                <Label Text="{Binding Institution}"/>
+
+                <Label Text="{Binding GiltighetsÅr}"/>
+                <Label Text="{Binding RegistreringsDatum}"/>
             </StackLayout>
         </Frame>
     </ContentPage.Content>
