--- a/PhersonalApplication/PhersonalApplication/Views/HomePage.xaml
+++ b/PhersonalApplication/PhersonalApplication/Views/HomePage.xaml
@@ -4,26 +4,48 @@
 			 x:Class="PhersonalApplication.Views.HomePage"
              Title="Profil">
     <ContentPage.Content>
-        <StackLayout>
-            <Label Text="Min Profil" HorizontalOptions="Center"
-                   VerticalOptions="CenterAndExpand" />
-            <!--Label Text="{Binding Rubrik}" TextColor="Black"/>
-            <Label Text="{Binding Beskrivning}" TextColor="Black"/>-->
-        </StackLayout>
+        <Frame BorderColor="Gray"
+               Padding="5"
+               CornerRadius="5"
+               Margin="20"
+               HasShadow="True">
+            <!--Rotation="90"-->
+            <StackLayout>
+
+                <!--<Label Text="{Binding Institution}"/>
+                <Label Text="{Binding Telefonnummer}"/>
+                <Label Text="{Binding Epostadress}"/>
+                <Label Text="{Binding GiltighetsÅr}"/>
+                <Label Text="{Binding RegistreringsDatum}"/>-->
+                
+
+                <Image Source="ProfileIcon.png" />
+                <Label Text="{Binding Förnamn} "
+                   FontSize="Medium"
+                   FontAttributes="Bold" />
+                <Label Text="{Binding Efternamn} "
+                   FontSize="Medium"
+                   FontAttributes="Bold" />
+                <BoxView Color="Gray"
+                   HeightRequest="2"
+                   HorizontalOptions="Fill" />
+                <Label FontSize="Micro">
+                    <Label.FormattedText>
+                        <FormattedString>
+                            <Span Text="Institution: "/>
+                            <Span Text="{Binding Institution}"/>
+                            <Span Text=" Telefonnummer: "/>
+                            <Span Text="{Binding Telefonnummer}"/>
+                            <Span Text=" Epostadress: "/>
+                            <Span Text="{Binding Epostadress}"/>
+                            <!--<Span Text=" Giltighetsår: "/>
+                            <Span Text="{Binding GiltighetsÅr}"/>
+                            <Span Text=" Registreringsdatum: "/>
+                            <Span Text="{Binding RegistreringsDatum}"/>-->
+                        </FormattedString>
+                    </Label.FormattedText>
+                </Label>
+            </StackLayout>
+        </Frame>
     </ContentPage.Content>
-    
-    <!--<ContentPage.Content>-->
-        <!--<ListView x:Name="NyheterListView">
-            <ListView.ItemTemplate>
-                <DataTemplate>
-                    <ViewCell>
-                        <StackLayout Orientation="Vertical">
-                            <Label FontAttributes="Bold" Text="{Binding Rubrik}" TextColor="Black"></Label>
-                            <Label Text="{Binding Beskrivning}" TextColor="Black"></Label>
-                        </StackLayout>
-                    </ViewCell>
-                </DataTemplate>
-            </ListView.ItemTemplate>
-        </ListView>--><!--
-    </ContentPage.Content>-->
 </ContentPage>
