--- a/PhersonalApplication/PhersonalApplication/Views/Activities.xaml
+++ b/PhersonalApplication/PhersonalApplication/Views/Activities.xaml
@@ -2,7 +2,7 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms" xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" x:Class="PhersonalApplication.Views.Activities" IconImageSource="customercard.png" Title="Aktiviteter">
     <ContentPage.Content>
         <StackLayout>
-            <Label Text="Aktiviteter go here" HorizontalOptions="Center" VerticalOptions="CenterAndExpand" />
+            <Label Text="Aktiviteter goes here" HorizontalOptions="Center" VerticalOptions="CenterAndExpand" />
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
