Toggle with VS comment the activity view for the tab bar

--- a/PhersonalApplication/PhersonalApplication/Views/MainPage.xaml
+++ b/PhersonalApplication/PhersonalApplication/Views/MainPage.xaml
@@ -5,6 +5,6 @@
             NavigationPage.HasNavigationBar="False">
     <local:HomePage Title="Hem" IconImageSource="HomeIcon.png" />
     <local:CustomerCard Title="Kort" IconImageSource="customercard.png"/>
-    <local:Activities Title="Aktiviteter" IconImageSource="NotificationIcon.png" />
+    <!--<local:Activities Title="Aktiviteter" IconImageSource="NotificationIcon.png" />-->
     <local:NewsPage Title="NyheterTest" IconImageSource="newsicon.png" />
 </TabbedPage>
